# offsetting-agent-robonomics

./: README.md  _dapp_pubsub_simulator.py  liability_manager.py  main.py  negotiator.py  pyproject.toml  worker.py
co2_intensity/: crop_table.py
coal_share/: crop_table.py  share-electricity-coal-01-09-2022.csv  share-electricity-coal-01-09-2022_cropped.csv
db/: burns.db  create_db.py
utils/: __init__.py  carbon_asset_burner.py  carbon_asset_calculator.py  constants.py  db_interaction.py  db_utils.py  exceptions.py  ipfs.py  ipfs_utils.py  liability.py  pubsub.py  substrate.py  substrate_utils.py
